- remove exit code constant - add security manager into test - use privilegedGetProperty instead of System.getProperty in CABI